# Decker

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/design/: Architecture.md
docs/development/: Organization.md
src/games/openmw/: Cargo.toml
src/lib/decker-helpers/: Cargo.toml
src/lib/decker-helpers/src/: lib.rs
src/lib/decker-lib/: Cargo.toml
src/lib/decker-lib/src/: games.rs  lib.rs
src/lib/filesystem-operations/sys-mount-filesystem-operations/: Cargo.toml
src/lib/filesystem-operations/sys-mount-filesystem-operations/src/: lib.rs
src/lib/filesystem-operations/vfs-filesystem-operations/: Cargo.toml
src/lib/filesystem-operations/vfs-filesystem-operations/src/: lib.rs
src/lib/repositories/sqlite-repository/: Cargo.toml
src/lib/repositories/sqlite-repository/src/: lib.rs
