[package]
name = "decker-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remote
clap = { version="4", features=["derive"] }
serde_rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
rusqlite = "0.28"
dirs = "4"
anyhow = "~1"

# Local
