[package]
name = "sqlite-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
decker-lib = {path="../../decker-lib"}
# Remote
rusqlite = "0.28"
dirs = "4"
anyhow = "~1"
thiserror = "~1"